--- a/css/home.css
+++ b/css/home.css
@@ -50,3 +50,86 @@ nav ul li a {
 nav ul li a:hover {
 	color: #ebebeb;
 }
+div.intro {
+	margin: 0 auto;
+	width: 75%;
+	height: 200px;
+}
+div.intro .text-body {
+	margin: 50px 0;
+	height: auto;
+	background-color: transparent;
+	padding: 15px;
+	color: #f0f0f0;
+	font-family: "Consolas", "Courier New", "Courier";
+	font-size: 1.75em;
+	line-height: 1.40em;
+	font-weight: 500;
+	text-align: center;
+	overflow: hidden;
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-ms-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+section {
+	width: 100%;
+	height: 400px;
+	background-color: white;
+	margin-top: 150px;
+}
+.typed-cursor {
+  opacity: 1;
+  font-weight: 100;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  -ms-animation: blink 0.7s infinite;
+  -o-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite; }
+
+@-keyframes blink {
+  0% {
+    opacity: 1; }
+
+  50% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1; }
+
+  50% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+@-moz-keyframes blink {
+  0% {
+    opacity: 1; }
+
+  50% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+@-ms-keyframes blink {
+  0% {
+    opacity: 1; }
+
+  50% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+@-o-keyframes blink {
+  0% {
+    opacity: 1; }
+
+  50% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
