--- a/css/home.css
+++ b/css/home.css
@@ -12,12 +12,13 @@ header {
 	height: 175px;
 	/*background-color: #666;*/
 }
-div.title {
+div.title a{
 	color: white;
 	position: absolute;
 	margin: 15px;
 	font-size: 30px;
 	font-weight: bolder;
+	text-decoration: none;
 }
 nav {
 	width: 100%;
@@ -78,6 +79,17 @@ section {
 	height: 400px;
 	background-color: white;
 	margin-top: 150px;
+}
+section article.about {
+	width: 90%;
+	height: auto;
+	margin: 0 auto;
+}
+section article.about h1{
+	font-family: times;
+	text-align: center;
+	padding: 30px 0 20px 0;
+	font-size: 50px
 }
 .typed-cursor {
   opacity: 1;
